--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,17 @@ dependencies {
 
 
 
-
+    compile 'com.android.support:support-compat:25.1.1'
+    compile 'com.daimajia.easing:library:2.0@aar'
+    compile 'com.daimajia.androidanimations:library:2.3@aar'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.mindorks:placeholderview:0.7.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
     compile 'com.roughike:bottom-bar:2.3.1'
+    compile 'com.android.support:support-v4:26.+'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
     testCompile 'junit:junit:4.12'
 }
 
@@ -47,6 +52,14 @@ configurations.all {
         }
     }
 }
+
+
+
+
+
+
+
+
 
 
 
