--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     })
 
 
-
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:support-compat:25.1.1'
     compile 'com.daimajia.easing:library:2.0@aar'
     compile 'com.daimajia.androidanimations:library:2.3@aar'
@@ -52,6 +52,8 @@ configurations.all {
         }
     }
 }
+
+
 
 
 
