--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     })
 
 
+    compile('com.google.android:flexbox:0.2.7') {
+        exclude group: 'com.android.support'
+    }
+
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:support-compat:25.1.1'
     compile 'com.daimajia.easing:library:2.0@aar'
@@ -38,6 +42,8 @@ dependencies {
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.allattentionhere:fabulousfilter:0.0.4'
+    compile 'com.github.jd-alexander:LikeButton:0.2.2'
     testCompile 'junit:junit:4.12'
 }
 
@@ -52,6 +58,10 @@ configurations.all {
         }
     }
 }
+
+
+
+
 
 
 
