--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,16 +20,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
     compile('com.google.android:flexbox:0.2.7') {
         exclude group: 'com.android.support'
     }
-
+    compile project(':circleindicator')
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:support-compat:25.1.1'
     compile 'com.daimajia.easing:library:2.0@aar'
@@ -58,6 +56,9 @@ configurations.all {
         }
     }
 }
+
+
+
 
 
 
