--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.TransNav">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.TransNav" />
         <activity
             android:name=".CartActivity"
             android:screenOrientation="portrait"
@@ -38,14 +32,39 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".BaseActivity" />
-        <activity android:name=".ProductsByCategoryActivity" />
-        <activity android:name=".ProductsListActivity" />
         <activity
-            android:name=".Fragments.FabDemoActivity"
-            android:label="@string/title_activity_fab_demo"
-            android:theme="@style/AppTheme" />
-        <activity android:name=".FabDemoActivity" />
-        <activity android:name=".ProductDetailsActivity" />
+            android:name=".ProductsByCategoryActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".ProductsListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+
+        <!-- <activity -->
+        <!-- android:name=".Fragments.FabDemoActivity" -->
+        <!-- android:label="@string/title_activity_fab_demo" -->
+        <!-- android:theme="@style/AppTheme" /> -->
+        <!-- <activity android:name=".FabDemoActivity" /> -->
+        <activity
+            android:name=".ProductDetailsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".AccountModule.LoginActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible|adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AccountModule.RegisterActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
+        <activity android:name=".ZoomImageActivity"></activity>
     </application>
 
 </manifest>
