--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
 
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.TransNav"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
 
@@ -41,11 +42,6 @@
             android:windowSoftInputMode="stateHidden" />
 
         <activity android:name=".BaseActivity" />
-
-        <activity
-            android:name=".ProductsByCategoryActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name=".ProductsListActivity"
