--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'realm-android'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
@@ -17,6 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+android {
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+}
+
+realm {
+    syncEnabled = true;
 }
 
 dependencies {
@@ -41,6 +51,7 @@ dependencies {
     compile 'com.android.support:support-v4:26.+'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.allattentionhere:fabulousfilter:0.0.4'
+    compile 'com.amitshekhar.android:android-networking:1.0.0'
     compile 'com.github.jd-alexander:LikeButton:0.2.2'
     testCompile 'junit:junit:4.12'
 }
