--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
         exclude group: 'com.android.support'
     }
     compile project(':circleindicator')
+    compile files('libs/java-json.jar')
+    compile 'com.amitshekhar.android:android-networking:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:support-compat:25.1.1'
     compile 'com.daimajia.easing:library:2.0@aar'
@@ -53,8 +55,8 @@ dependencies {
     compile 'com.allattentionhere:fabulousfilter:0.0.4'
     compile 'com.amitshekhar.android:android-networking:1.0.0'
     compile 'com.github.jd-alexander:LikeButton:0.2.2'
+    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     testCompile 'junit:junit:4.12'
-    compile files('libs/java-json.jar')
 }
 
 
