--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,45 +5,39 @@
 
     <uses-sdk tools:overrideLibrary="com.mindorks.placeholderview" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".App.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
-
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"/>
-
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".CartActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
-
         <activity
             android:name=".CheckoutActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
-
         <activity
             android:name=".AddressesActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"
-            />
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".Edit_New_AddressActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
-
         <activity android:name=".BaseActivity" />
-
         <activity
             android:name=".ProductsListActivity"
             android:screenOrientation="portrait"
@@ -58,7 +52,6 @@
             android:name=".ProductDetailsActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
-
         <activity
             android:name=".AccountModule.LoginActivity"
             android:screenOrientation="portrait"
@@ -69,16 +62,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AccountModule.RegisterActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
-
-        <activity android:name=".ProductDetailsViews.ProductDescriptionFeaturesActivity"
+        <activity
+            android:name=".ProductDetailsViews.ProductDescriptionFeaturesActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
-
+        <activity android:name=".AccountModule.ForgotPasswordActivity"></activity>
     </application>
 
 </manifest>
