--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,16 +47,18 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.mindorks:placeholderview:0.7.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.allattentionhere:fabulousfilter:0.0.4'
-    compile 'com.amitshekhar.android:android-networking:1.0.0'
     compile 'com.github.jd-alexander:LikeButton:0.2.2'
     compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+    compile 'com.appyvet:materialrangebar:1.3'
     testCompile 'junit:junit:4.12'
+    compile project(':sweet_alert')
 }
 
 
